--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:~/ozgur
+spring.datasource.url=jdbc:h2:mem:~/testdb
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.path=/h2-console
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto = create
-server.port=8081
+
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
+
 
